@@ -2,6 +2,7 @@ Changes in 6.0.3 (unreleased)
 - NFORenum specific changes:
   - Data file updates
     - Action 4 language ID 0x13 (Scottish Gaelic).
+    - Action D patch variables 15 and 16.
 - GRFcodec specific changes:
   - Fix container v2 include sprite decoding.
   - Fix encoding from interlaced png images.
